--- a/assets/img/My Portfolio.html
+++ b/assets/img/My Portfolio.html
@@ -32,7 +32,7 @@
 
 <!--Image and short intro-->
 <div class="container-fluid p-6 bg-white text-black text-center">
-	<img src="./My Portfolio_files/profile.jpg" class="rounded-circle" height="200" width="250">
+	<img src="../My Portfolio_files/profile.jpg" class="rounded-circle" height="200" width="250">
 	<h4 style="color: red;">Namika Prajapati</h4>
 	<img src="./My Portfolio_files/facebook.svg" height="30" width="30">
 	<a href="https://www.facebook.com/namika.prajapati">Facebook</a>
